force-app/main/default/objects/Visit_Detail__c/Visit_Detail__c.object-meta.xml
<CustomObject>
    <label>Visit Detail</label>
    <nameField>
        <displayFormat>Visit-{00000}</displayFormat>
        <label>Visit Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>