force-app/main/default/objects/Visit_Detail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relate to account for reporting</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Details</relationshipLabel>
    <relationshipName>Visit_Details</relationshipName>
    <type>Lookup</type>
</CustomField>