force-app/main/default/objects/Visit_Detail__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Date occure</description>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>